--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>HELLO</h1>
+<table>
+    <tr>
+        <td>
+            <a href="login">Login</a>
+        </td>
+    </tr>
+</table>
 
 </body>
 </html>
