--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -9,7 +9,7 @@
 <div class="col-3"></div>
 <div class="container col-6">
     <h1>Edit User</h1>
-    <form th:object="${user}" th:action="@{save}" action="#" method="post">
+    <form th:object="${product}" th:action="@{save}" action="#" method="post">
         <input type="hidden" th:field="*{id}">
         <div>
             <label th:text="Name" th:for="name"></label>
@@ -17,13 +17,13 @@
         </div>
         <div style="clear: both; display: block; height: 10px"></div>
         <div>
-            <label th:text="Email" th:for="email"></label>
-            <input type="text" th:field="*{email}" class="form-control"/>
+            <label th:text="Price" th:for="price"></label>
+            <input type="text" th:field="*{price}" class="form-control"/>
         </div>
         <div style="clear: both; display: block; height: 10px"></div>
         <div>
-            <label th:text="Phone" th:for="phone"></label>
-            <input type="text" th:field="*{phone}" class="form-control"/>
+            <label th:text="Descrption" th:for="description"></label>
+            <input type="text" th:field="*{description}" class="form-control"/>
         </div>
         <div style="clear: both; display: block; height: 10px"></div>
         <input type="submit" class="btn btn-success" value="Save"/>
