--- a/src/main/resources/templates/products/addProduct.html
+++ b/src/main/resources/templates/products/addProduct.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
-    <title>Add User</title>
+    <title>Add Product</title>
     <link type="text/css" rel="stylesheet" href="bootstrap.min.css" th:href="@{bootstrap.min.css}"/>
 </head>
 <body>
 <div class="col-3"></div>
 <div class="container col-6">
-    <h1>New User</h1>
+    <h1>New Product</h1>
     <div class="col-md-auto">
         <form th:object="${product}" th:action="@{save}" action="#" method="post">
             <div>
