--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -6,26 +6,35 @@
     <link type="text/css" rel="stylesheet" href="bootstrap.min.css" th:href="@{bootstrap.min.css}"/>
 </head>
 <body>
-<div class="col-3"></div>
+
 <div class="container col-6">
     <h1>Manage Product</h1>
+    <form th:action="@{products/search}">
+        <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+        <input type="submit" value="Search" />
+
+
+    </form>
+
     <table class="table table-active">
         <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Price</th>
             <th>Description</th>
-
+<!--            <th>Supplier Name</th>-->
+<!--            <th>Category Name</th>-->
         </tr>
         <tr th:each="product : ${products}">
             <td th:text="${product.id}"></td>
             <td th:text="${product.name}"></td>
             <td th:text="${product.price}"></td>
+            <td th:text="${product.description}"></td>
 <!--            <td th:text="${product.supplier.name}"></td>-->
 <!--            <td th:text="${product.category.name}"></td>-->
             <td>
                 <a th:href="@{products/edit?id={id}(id=${product.id})}" class="btn btn-primary">Edit</a>
-                <a th:href="@{products/delete?id={id}(id=${product.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{products/delete?id={id}(id=${product.id})}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
             </td>
         </tr>
     </table>
