--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -22,7 +22,7 @@
             <th>Name</th>
             <th>Price</th>
             <th>Description</th>
-<!--            <th>Supplier Name</th>-->
+            <th>Supplier Name</th>
 <!--            <th>Category Name</th>-->
         </tr>
         <tr th:each="product : ${products}">
@@ -30,8 +30,11 @@
             <td th:text="${product.name}"></td>
             <td th:text="${product.price}"></td>
             <td th:text="${product.description}"></td>
-<!--            <td th:text="${product.supplier.name}"></td>-->
-<!--            <td th:text="${product.category.name}"></td>-->
+            <td th:text="${product.supplier.name}"></td>
+<!--            <td th:each="category : ${product.categories}">-->
+<!--                <span th:text="${category.name}"></span>-->
+<!--            </td>-->
+
             <td>
                 <a th:href="@{products/edit?id={id}(id=${product.id})}" class="btn btn-primary">Edit</a>
                 <a th:href="@{products/delete?id={id}(id=${product.id})}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
